--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <input type="text" placeholder="Enter your email" id="email">
                         </div>
                         <div class="form-element">
-                            <label for="message" >Message</label>
+                            <label for="message">Message</label>
                             <textarea id="message" placeholder="Type your message here:"></textarea>
                         </div>
                     </div>
@@ -145,7 +145,8 @@
             </div>
         </div>
     </section>
-    
+    <p>halo</p>
+
 
     <!-- ION ICONS -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
