added light section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="section-light">
         <h2>Contact us</h2>
         <p class="contact-us">Our branches:</p>
         <div class="contact-us-row">
@@ -145,7 +145,7 @@
             </div>
         </div>
     </section>
-    <p>halo</p>
+    
 
 
     <!-- ION ICONS -->
