--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/queries.css">
     <title>Lucky Dice</title>
 </head>
 
@@ -145,7 +146,9 @@
             </div>
         </div>
     </section>
-    
+    <footer>
+        
+    </footer>
 
 
     <!-- ION ICONS -->
