--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul class="nav-links">
                 <li><a href="#">Free inspection</a></li>
                 <li><a href="#">Pricing</a></li>
-                <li><a href="#">About us</a></li>
                 <li><a href="#">Contact us</a></li>
+                <li><a href="#">About us</a></li>
             </ul>
         </nav>
         <div class="hero-text">
@@ -146,8 +146,37 @@
             </div>
         </div>
     </section>
+
     <footer>
-        
+        <div class="footer-top">
+            <div class="footer-brand-row">
+                <img src="img/logo.png" alt="Lucky Dice logo">
+                <div class="footer-brand-info-col">
+                    <h4>Lucky Dice</h4>
+                    <p>Lucky Dice is a professional car mechanic, whose mission is to help people in case of a car
+                        breakdown.</p>
+                </div>
+            </div>
+            <div class="footer-links-col">
+                <a href="">About us</a>
+                <a href="">Meet us</a>
+                <div class="footer-item">
+                    <ion-icon name="camera-outline"></ion-icon>
+                    <a href=""> See our realizations</a>
+                </div>
+                <div class="footer-item"><ion-icon name="mail-outline"></ion-icon>
+                    <a href="">contact@luckydice.co</a>
+                </div>
+                <div class="footer-item"><ion-icon name="call-outline"></ion-icon>
+                    <a href=""> 000-000-000</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>2025 © All rights reserved</p>
+            <a href="">Privacy Policy</a>
+        </div>
     </footer>
 
 
