footer fixed and media queries added for tablets

--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
 
     <section class="section-light">
         <h2>Contact us</h2>
-        <p class="contact-us">Our branches:</p>
         <div class="contact-us-row">
-            <div class="contact-us-card">
+            <div class="contact-us-card-1">
+                <p class="branches-title">Our branches:</p>
                 <p>Branch 1: Address</p>
                 <p>Branch 2: Address</p>
                 <p>Branch 3: Address</p>
                 <p>Branch 4: Address</p>
             </div>
-            <div class="contact-us-card">
+            <div class="contact-us-card-2">
                 <form>
                     <div class="form">
                         <div class="form-element">
