--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#">Contact us</a></li>
                 <li><a href="#">About us</a></li>
             </ul>
+            <ion-icon name="reorder-three" id="nav-burger"></ion-icon>
         </nav>
         <div class="hero-text">
             <h1>Car trouble? We can help!</h1>
@@ -183,7 +184,8 @@
     <!-- ION ICONS -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+    <!-- SCRIPTS -->
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
