--- a/index.html
+++ b/index.html
@@ -160,23 +160,26 @@
             <div class="footer-brand-row">
                 <img src="img/logo.png" alt="Lucky Dice logo">
                 <div class="footer-brand-info-col">
-                    <h4>Lucky Dice</h4>
-                    <p>Lucky Dice is a professional car mechanic, whose mission is to help people in case of a car
+                    <h4>LUCKY DICE</h4>
+                    <p>professional car mechanic, whose mission is to help people in case of a car
                         breakdown.</p>
                 </div>
             </div>
-            <div class="footer-links-col">
-                <a href="">About us</a>
-                <a href="">Meet us</a>
-                <div class="footer-item">
-                    <ion-icon name="camera-outline"></ion-icon>
-                    <a href=""> See our realizations</a>
+            <div class="footer-menu-contact-row">
+                <div class="footer-links-col">
+                    <h4>Menu</h4>
+                    <a href="">About us</a>
+                    <a href="">Meet us</a>
+                    <a href="">See our realizations</a>
                 </div>
-                <div class="footer-item"><ion-icon name="mail-outline"></ion-icon>
-                    <a href="">contact@luckydice.co</a>
-                </div>
-                <div class="footer-item"><ion-icon name="call-outline"></ion-icon>
-                    <a href=""> 000-000-000</a>
+                <div class="footer-contact-col">
+                    <h4>Contact</h4>
+                    <div class="footer-item"><ion-icon name="mail-outline"></ion-icon>
+                        <a href="">contact@luckydice.com</a>
+                    </div>
+                    <div class="footer-item"><ion-icon name="call-outline"></ion-icon>
+                        <a href=""> 000-000-000</a>
+                    </div>
                 </div>
             </div>
         </div>
