--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
 
-    <!-- SECTION -->
+    <!-- SECTION PRICELIST-->
     <section>
         <h2>Pricelist</h2>
         <div class="pricelist-cards-container">
@@ -121,6 +121,7 @@
         </div>
     </section>
 
+    <!-- SECTION CONTACT US-->
     <section class="section-light">
         <h2>Contact us</h2>
         <div class="contact-us-row">
@@ -155,25 +156,26 @@
         </div>
     </section>
 
+    <!-- FOOTER-->
     <footer>
         <div class="footer-top">
             <div class="footer-brand-row">
                 <img src="img/logo.png" alt="Lucky Dice logo">
                 <div class="footer-brand-info-col">
-                    <h4>LUCKY DICE</h4>
+                    <h4>Lucky Dice</h4>
                     <p>professional car mechanic, whose mission is to help people in case of a car
                         breakdown.</p>
                 </div>
             </div>
             <div class="footer-menu-contact-row">
                 <div class="footer-links-col">
-                    <h4>Menu</h4>
+                    <h5>Menu</h5>
                     <a href="">About us</a>
                     <a href="">Meet us</a>
                     <a href="">See our realizations</a>
                 </div>
                 <div class="footer-contact-col">
-                    <h4>Contact</h4>
+                    <h5>Contact</h5>
                     <div class="footer-item"><ion-icon name="mail-outline"></ion-icon>
                         <a href="">contact@luckydice.com</a>
                     </div>
